Fixed an issue with event bubbling preventing the form from working correctly, as well as made JavaScript files more readable by organizing them and adding documentation

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -13,6 +13,15 @@
   box-shadow: 2px 2px 2px lightgrey;
   transition: max-height 1s;
   transition-timing-function: ease-out;
+  position: relative;
+
+  .close {
+    position: absolute;
+    right: 10px;
+    top: 3px;
+    cursor: pointer;
+    font-size: 25px;
+  }
 
   h2 {
     font-size: 28px;
@@ -23,12 +32,6 @@
   .date {
     margin: 0;
     font-size: 14px;
-  }
-
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
   }
 
   .expandButton {
@@ -46,7 +49,3 @@
 .article-open {
   max-height: 800px;
 }
-
-
-
-
