--- a/CSS/index.css
+++ b/CSS/index.css
@@ -44,12 +44,19 @@
   border: 1px solid lightgrey;
   border-radius: 10px;
   background-color: white;
-  position: relative;
   max-height: 75px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
   transition: max-height 1s;
   transition-timing-function: ease-out;
+  position: relative;
+}
+.article .close {
+  position: absolute;
+  right: 10px;
+  top: 3px;
+  cursor: pointer;
+  font-size: 25px;
 }
 .article h2 {
   font-size: 28px;
@@ -59,11 +66,6 @@
 .article .date {
   margin: 0;
   font-size: 14px;
-}
-.article .close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
 }
 .article .expandButton {
   position: absolute;
@@ -87,8 +89,8 @@
   position: absolute;
   right: 20px;
   cursor: pointer;
-  width: 48px;
-  height: 48px;
+  width: 37px;
+  height: 37px;
 }
 .header {
   height: 10vh;
@@ -147,6 +149,7 @@
   flex-flow: column nowrap;
   justify-content: space-around;
   align-items: center;
+  z-index: 5;
   box-shadow: 0 0 15px black;
   border-radius: 10px;
   background-color: white;
