--- a/Form/Form.less
+++ b/Form/Form.less
@@ -22,6 +22,7 @@
     flex-flow: column nowrap;
     justify-content: space-around;
     align-items: center;
+    z-index: 5;
 
     box-shadow: 0 0 15px black;
     border-radius: 10px;
