--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -7,8 +7,8 @@
   position: absolute;
   right: 20px;
   cursor: pointer;
-  width: 48px;
-  height: 48px;
+  width: 37px;
+  height: 37px;
 }
 .header {
   height: 10vh;
